--- a/src/main/resources/templates/view/lotto_manual_error.html
+++ b/src/main/resources/templates/view/lotto_manual_error.html
@@ -49,8 +49,8 @@
     </header>
 
     <main role="main" class="inner cover">
-        <form action="/manual_amount" class="was-validated">
-            <h4>{{error_manual}}</h4>
+        <form action="/amount" class="was-validated">
+            <h4>{{error_custom}}</h4>
             <p class="lead">
                 <button type="submit" class="btn btn-success">뒤로 가기</button>
             </p>
@@ -59,8 +59,8 @@
 
     <footer class="mastfoot mt-auto">
         <div class="inner">
-            <p>Made by Pododang <br />
-                <a href="https://github.com/backlo">Git 주소 클릭!!</a> <br />
+            <p>Made by Pododang <br/>
+                <a href="https://github.com/backlo">Git 주소 클릭!!</a> <br/>
                 Call : 010-0000-0000.
             </p>
         </div>
