feat: add showing lottos that user bought function

--- a/src/main/resources/templates/purchasing_lotto.html
+++ b/src/main/resources/templates/purchasing_lotto.html
@@ -48,6 +48,8 @@
 					<button type="submit" class="btn btn-outline-secondary">구매하기</button>
 				</div>
 				<input type="hidden" id="max-custom-amount">
+				<input type="hidden" name="money" value="5000">
+				<input type="hidden" name="lottos" value="1,2,3,4,5,6-11,12,13,14,15,16">
 			</form>
 		</div>
 	</div>
