--- a/src/main/resources/templates/manual.html
+++ b/src/main/resources/templates/manual.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form action="/lottos" method="post">
-    {{#each manualLottoNames}}
+    {{#each manualLottoTagNames}}
     수동 로또 번호: <input name="{{this}}" type="text"/>
     <br><br>
     {{/each}}
