--- a/src/main/resources/templates/finalResult.html
+++ b/src/main/resources/templates/finalResult.html
@@ -5,22 +5,28 @@
     <title>로또 결과</title>
 </head>
 <body>
+<div align="center">
 <h1>당첨 통계</h1>
 <div>-----------</div>
 {{#FIRST}}
-<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div>
+<br>
 {{/FIRST}}
 {{#SECOND}}
-<div> {{matchCount}}개 일치,보너스 볼 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+<div> {{matchCount}}개 일치,보너스 볼 일치 ({{money}}원)- {{matchLottoCount}}개</div>
+<br>
 {{/SECOND}}
 {{#THIRD}}
-<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div>
+<br>
 {{/THIRD}}
 {{#FORTH}}
-<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div>
+<br>
 {{/FORTH}}
 {{#FIFTH}}
-<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div><br>
+<div> {{matchCount}}개 일치 ({{money}}원)- {{matchLottoCount}}개</div>
+<br>
 {{/FIFTH}}
 <div>수익률은 {{rate}} % 입니다.</div>
 <br>
@@ -30,5 +36,6 @@
     <input type="hidden" name="roundNumber" value="{{this}}">
 </form>
 {{/each}}
+</div>
 </body>
 </html>
