feat : 회차 선택 기능 구현

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,9 @@
 <form action="winninglotto/create">
     <input type="submit" value="당첨 번호 입력">
 </form>
+<form action="/showhistory/selectround">
+    <input type="submit" value="이전 기록 보기">
+</form>
 <div class="hello"></div>
 </body>
 </html>
